CSS overflow fix

--- a/public/style.css
+++ b/public/style.css
@@ -379,8 +379,6 @@ h2 {
 
 #member-view-container {
   position: relative;
-  overflow-y: scroll;
-  overflow-x: hidden;
   margin-top: 15px;
   height: 50%;
   padding-bottom: 100px;
